[ci] Coveralls hasn't built the project since June 25th
The previous fix was not enough. Coveralls maven plugin depends on
javax.xml.bind, which has been removed with JDK11, since it is
a EE feature.

Workaround is now, to add the jaxb-api as a plugin dependency, so
that the utility class javax.xml.bind.DatatypeConverter is
available.

Fixes #1317