@@ -12,11 +12,6 @@ if ! travis_isPush; then
     exit 0
 fi
 
-#
-# for java9: enable all modules.
-# coveralls plugin seems to need java.xml.bind module
-echo "MAVEN_OPTS='-Xms1g -Xmx1g --add-modules java.se'" > ${HOME}/.mavenrc
-
 (
     # disable fast fail, exit immediately, in this subshell
     set +e
